Added number of reviews to ProductResponse and added it to the ui next to the review star component. Also, changed add button to display out of stock if there is no item avaiable in stock quantity.